[package]
name = "logt"
version = "0.1.1"
edition = "2024"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
description = "CLI wrapper that provides timestamps to output lines"
repository = "https://codeberg.org/Joz/logt"
license = "LGPL-3.0"
exclude = ["test.sh"]

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
